# baidu-netdisk-manager

./: .gitignore  PROJECT_ARCHITECTURE.md  PROJECT_REPORT.md  README.md  api.py  audio_transcript.py  auth.py  auto_extract.py  batch_extract.py  classifier.py  cleaner.py  config.yaml.example  db.py  dedup.py  manager.py  migration.py  multi_agent_bodhi_pipeline.py  munger_agent.py  organizer.py  pyproject.toml  refine_bodhi_analysis.py  requirements.txt  srt_receiver.py  state_store.py  subtitle_extractor.py  sync.py  taxonomy.py  transcription_plan.md  whisper_transcribe.py
docs/: OPTIMIZATION_REVIEW_2026-02-22.md  PROJECT_DOCS_MAP.md
